[close #5] - processar_comunicar_respostas

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,8 @@
-<h1 align="center">Happy Nel</h1>
-
-<p id="notice"><%= notice %></p>
-
 <%= link_to "Create User", users_path %> <br>
 <%= no_pending_research? %> <br>
 
 
-<h3> Concluded Researches: </h3>
+<h3> Researches: </h3>
 <% @researches.reverse.each do |research| %>
   <span> <%= research.created_at %>, <%= research.concluded %> </span>
   <% unless research.concluded %>
