--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,6 +1,7 @@
 body {
-  background-color: #fff;
-  color: #333;
+  font-family: 'Lato', Arial, sans-serif;
+  background-color: #6d454c;
+  color: #fcff6c;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
@@ -20,19 +21,6 @@ pre {
   font-size: 11px;
 }
 
-a {
-  color: #000;
-
-  &:visited {
-    color: #666;
-  }
-
-  &:hover {
-    color: #fff;
-    background-color: #000;
-  }
-}
-
 th {
   padding-bottom: 5px;
 }
@@ -49,32 +37,32 @@ div {
   }
 }
 
-#notice {
-  color: green;
-}
 
 .field_with_errors {
   padding: 2px;
-  background-color: red;
+  background-color: #720015;
   display: table;
+  border-radius: 5px;
 }
 
 #error_explanation {
+  border-radius: 15px;
   width: 450px;
-  border: 2px solid red;
   padding: 7px;
   padding-bottom: 0;
   margin-bottom: 20px;
-  background-color: #f0f0f0;
+  background-color: #fcff6c;
+  color: #720015;
 
   h2 {
+    font-family: "Merriweather Sans", sans-serif;
     text-align: left;
     font-weight: bold;
     padding: 5px 5px 5px 15px;
     font-size: 12px;
     margin: -7px;
     margin-bottom: 0;
-    background-color: #c00;
+    background-color: #720015;
     color: #fff;
   }
 
