--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>HappyNel</title>
+    <title>Happy Nel</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -9,11 +9,17 @@
   </head>
 
   <body>
-    <h1 align="center">Happy Nel</h1>
+    <h1 align="center" class="home-head-title">Happy Nel</h1>
 
-    <% flash.each do |key, value| %>
-      <div class="alert alert-<%= key %>"><%= value %></div>
-    <% end %>
+    <div class="container-fluid">
+      <div class="row" align="center">
+        <div style="width: 600px;">
+          <% flash.each do |key, value| %>
+            <div class="alert-dismissible alert alert-<%= key %>"><%= value %></div>
+          <% end %>
+        </div>
+      </div>
+    </div>
 
     <%= yield %>
   </body>
