--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,28 +1,53 @@
-<h1>Users</h1>
+<div class="box_head head-color" align="center">
+  <div>
+    <h2>Manage Users</h2>
+  </div>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="base_box container-fluid">
+  <div class="base_box_content">
+    <h3 class="box_list"> Users: </h3>
 
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.name %></td>
-        <td><%= user.email %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <br>
 
-<br>
+    <div class="box_list">
+      <table class="research_table">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
 
-<%= link_to 'New User', new_user_path %>
-<%= link_to 'Back', root_path %>
+        <tbody>
+          <% @users.each do |user| %>
+            <tr>
+              <td><%= user.name %></td>
+              <td><%= user.email %></td>
+              <td>
+                <%= link_to user, method: :delete, data: { confirm: 'Are you sure?' },
+                  class: "btn btn-danger btn-xs" do %>
+                  <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                <% end %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="bot_group_btn">
+      <%= link_to new_user_path, class: "btn btn-success btn-s" do %>
+        <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"> User </span>
+      <% end %>
+
+      <%= link_to root_path, class: "btn btn-info btn-s" do %>
+        <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"> Back </span>
+      <% end %>
+    </div>
+
+    <br>
+
+  </div>
+</div>
