--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,19 @@
-<h1>New User</h1>
+<div class="box_head head-color" align="center">
+  <div>
+    <h2>New User</h2>
+  </div>
+</div>
 
-<%= render 'form', user: @user %>
+<div class="base_box container-fluid">
+  <div class="base_box_content">
+    <div class="box_list">
+      <%= render 'form', user: @user %>
+    </div>
 
-<%= link_to 'Back', users_path %>
+    <div class="box_list bot_group_btn">
+      <%= link_to users_path, class: "btn btn-info btn-s" do %>
+        <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"> Back </span>
+      <% end %>
+    </div>
+  </div>
+</div>
