--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -75,3 +75,45 @@ div {
 label {
   display: block;
 }
+
+.alert-box {
+  width: 600px;
+}
+
+.base_box {
+  background-color: #fff;
+  width: 600px;
+  height: 100%;
+  margin: 0 auto;
+}
+
+.base_box_content {
+  padding-left: 10px;
+  padding-top: 10px;
+}
+
+.box_list {
+  color: #a9896d;
+  font-family: 'Lato', Arial, sans-serif;
+}
+
+.box_head {
+  color: #f9f6e5;
+  width: 600px;
+  height: 70px;
+  margin: 0 auto;
+  font-weight: 700;
+  font-size: 1.5em;
+  line-height: 1px;
+  padding-top: 10px;
+  font-family: 'Lato', Arial, sans-serif;
+}
+
+.head-color {
+  background-color: #f7941e;
+}
+
+.box_content {
+  padding-left: 25px;
+  padding-top: 10px;
+}
