--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
     <div class="container-fluid">
       <div class="row" align="center">
-        <div style="width: 600px;">
+        <div class="alert-box">
           <% flash.each do |key, value| %>
             <div class="alert-dismissible alert alert-<%= key %>"><%= value %></div>
           <% end %>
